WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56775
Plug-in process crashes if it fails to load a plug-in module
https://bugs.webkit.org/show_bug.cgi?id=56775
Summary
Plug-in process crashes if it fails to load a plug-in module
Anders Carlsson
Reported
2011-03-21 15:50:41 PDT
Plug-in process crashes if it fails to load a plug-in module
Attachments
Patch
(2.57 KB, patch)
2011-03-21 15:52 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-03-21 15:52:23 PDT
Created
attachment 86378
[details]
Patch
Anders Carlsson
Comment 2
2011-03-21 15:56:18 PDT
Committed
r81615
: <
http://trac.webkit.org/changeset/81615
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug