2011-03-21  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Plug-in process crashes if it fails to load a plug-in module
        https://bugs.webkit.org/show_bug.cgi?id=56775

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::initialize):
        If NetscapePlugin::create returns null, call removePluginControllerProxy with a null plug-in.

        * PluginProcess/WebProcessConnection.cpp:
        (WebKit::WebProcessConnection::removePluginControllerProxy):
        Remove an incorrect assertion. Don't invalidate the remote object map if the plug-in is null.


Canonical link: https://commits.webkit.org/71455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81615 268f45cc-cd09-0410-ab3c-d52691b4dbfc